--- a/SMA_ML.ipynb
+++ b/SMA_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
    "source": [
     "!pip install pmdarima\n",
     "!pip install yfinance\n",
-    "!pip install xgboost"
+    "!pip install xgboost\n"
    ]
   },
   {
